--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>UWR</title>
   </head>
-  <body class="bg-info-subtle">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
